# data_collect_databricks

./: README.md  main.py  pyproject.toml
Pokemon/: Bronze Pokemon.ipynb  Collect.ipynb  Pokemon details.ipynb
jovem_nerd/: New Notebook 2026-03-02 15_35_50.ipynb  main.py
jovem_nerd/data/episodios/json/: 2026-02-28 00:06:01.032215.json  2026-02-28 00:14:22.141251.json  2026-02-28 00:15:11.678553.json  2026-02-28 00:15:18.530281.json
residente_evil/: main.py  residente_evil_personagens.csv  residente_evil_personagens.parquet  residente_evil_personagens.pkl
tab_news/: main.py  read_spark.py
tab_news/data/contents/json/: 2026-02-27 17:04:58.472574.json  2026-02-27 17:05:00.621651.json  2026-02-27 17:05:02.856599.json  2026-02-27 17:05:05.018286.json  2026-02-27 17:05:09.582551.json  2026-02-27 17:05:11.775560.json  2026-02-27 17:05:13.930880.json
