[project]
name = "coleta-de-dad0s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastparquet>=2025.12.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
